--- a/css/index.css
+++ b/css/index.css
@@ -301,11 +301,11 @@ h1 {
         display: flex;
     }
     .enlaceMenuMobile {
-        font-size: 15px;
+        font-size: 19px;
         line-height: 26px;
         color: #69707D;
         font-weight: 400;
-        margin: 0px 8px;
+        margin: 0px 22px;
     }
     .segundoDivHeader {
         display: flex;
@@ -328,13 +328,19 @@ h1 {
     main {
         margin-top: 50px;
         display: grid;
-        grid-template-columns: 1.2fr 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-template-rows: 300px 300px ;
         grid-template-areas: 
         "derecha izquierda1"
         "derecha izquierda2";
-        padding: 10px 20px;
-        gap: 10px 50px;
+        padding: 10px 50px;
+        gap: 10px 80px;
+    }
+    h1 {
+        font-weight: bold;
+        font-size: 44px;
+        line-height: 48px;
+        color: #1D2026;
     }
     .primerSection {
         grid-area: derecha;
@@ -358,7 +364,7 @@ h1 {
         margin: 0px;
     }
     .imagenCaja {
-        width: 80px;
+        width: 100px;
         border-radius: 10px;
     }
     .imagenCaja:hover {
@@ -389,7 +395,7 @@ h1 {
     .divCarrito {
         width: 320px;
         right: 0px;
-        left: 550px;
+        left: 80%;
         top: 80px;
         box-shadow: 0px 20px 50px -20px rgba(29, 32, 38, 0.503143);
     }
@@ -406,7 +412,7 @@ h1 {
         margin-top: 50px;
     }
     .divSubcarrito {
-        width: 120px;
+        width: 160px;
     }
     .divAnadirAlCarrito {
         width: 100%;
@@ -416,7 +422,9 @@ h1 {
         padding-bottom: 35px ;
         border-bottom: 5px solid #FF7E1B;
     }
-
+    .attribution {
+        display: block;
+    }
 }
 
 /*----------------------------- FOOTER --------------------------------*/
